--- a/Lab8/package.json
+++ b/Lab8/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.8.4",
+    "blueimp-md5": "^2.19.0",
     "express": "^4.21.2",
     "express-handlebars": "^8.0.1",
     "md5": "^2.3.0"
