--- a/Lab10/package.json
+++ b/Lab10/package.json
@@ -14,6 +14,7 @@
     "express": "^4.21.2",
     "bcrypt": "^5.1.1",
     "express-session": "^1.18.1",
-    "mongodb": "^6.16.0"
+    "mongodb": "^6.16.0",
+    "express-handlebars": "^8.0.1"
   }
 }
